[package]
name = "gonana_token"
version = "0.1.0"
authors = [ "timadigwe <timothyadigwe2019@gmail.com>" ]
edition = "2021"
license = "MPL-2.0"
description = "Smart contract for the gonana-token"

[features]
default = ["std"]
std = ["concordium-std/std", "concordium-cis2/std"]
wee_alloc = ["concordium-std/wee_alloc"]

[dependencies]
concordium-std = {version = "8.1", default-features = false}
concordium-cis2 = {version = "5.1", default-features = false}

[dev-dependencies]
concordium-smart-contract-testing = "3.0"

[lib]
crate-type=["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
